--- a/jProject/pom.xml
+++ b/jProject/pom.xml
@@ -168,6 +168,29 @@
 		
 		
 	</dependencies>
+	
+<repositories>
+    <repository>
+        <snapshots>
+            <enabled>false</enabled>
+        </snapshots>
+        <id>central</id>
+        <name>bintray</name>
+        <url>http://jcenter.bintray.com</url>
+    </repository>
+</repositories>	
+
+	
+<pluginRepositories>
+    <pluginRepository>
+        <snapshots>
+            <enabled>false</enabled>
+        </snapshots>
+        <id>central</id>
+        <name>bintray-plugins</name>
+        <url>http://jcenter.bintray.com</url>
+    </pluginRepository>
+</pluginRepositories>
 
 	<build>
 		<plugins>
