--- a/jProject/pom.xml
+++ b/jProject/pom.xml
@@ -18,6 +18,20 @@
 		<java.version>1.8</java.version>
 	</properties>
 	<dependencies>
+
+		<dependency>
+			<groupId>org.apache.tomcat.embed</groupId>
+			<artifactId>tomcat-embed-jasper</artifactId>
+			<version>9.0.44</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<version>2.4.4</version>
+			<scope>provided</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -33,164 +47,169 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
+		<dependency>
 			<groupId>wsdl4j</groupId>
 			<artifactId>wsdl4j</artifactId>
 		</dependency>
-		
+
 		<dependency>
-    <groupId>commons-io</groupId>
-    <artifactId>commons-io</artifactId>
-    <version>2.2</version>
-</dependency>
-<dependency>
-    <groupId>tech.tablesaw</groupId>
-    <artifactId>tablesaw-core</artifactId>
-    <version>0.38.2</version>
-</dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.2</version>
+		</dependency>
+		<dependency>
+			<groupId>tech.tablesaw</groupId>
+			<artifactId>tablesaw-core</artifactId>
+			<version>0.38.2</version>
+		</dependency>
 
-<dependency>
-    <groupId>joinery</groupId>
-    <artifactId>joinery-dataframe</artifactId>
-    <version>1.8</version>
-</dependency>
-<dependency>
-    <groupId>org.apache.poi</groupId>
-    <artifactId>poi-ooxml-schemas</artifactId>
-    <version>3.15</version>
-</dependency>
-<dependency>
-             <groupId>org.apache.poi</groupId>
-             <artifactId>poi</artifactId>
-             <version>3.9</version>
-      </dependency>
-      <dependency>
-             <groupId>org.apache.poi</groupId>
-             <artifactId>poi-ooxml</artifactId>
-             <version>3.9</version>
-      </dependency>
-      <dependency>
-             <groupId>org.apache.poi</groupId>
-             <artifactId>poi-ooxml-schemas</artifactId>
-             <version>3.9</version>
-      </dependency>
-      <dependency>
-             <groupId>org.apache.poi</groupId>
-             <artifactId>poi-scratchpad</artifactId>
-             <version>3.9</version>
-      </dependency>
-      <dependency>
-             <groupId>org.apache.poi</groupId>
-             <artifactId>ooxml-schemas</artifactId>
-             <version>1.1</version>
-      </dependency>
-      <dependency>
-             <groupId>org.apache.poi</groupId>
-             <artifactId>openxml4j</artifactId>
-             <version>1.0-beta</version>
-      </dependency>
-      <dependency>
-    <groupId>org.knowm.xchart</groupId>
-    <artifactId>xchart</artifactId>
-    <version>3.8.0</version>
-</dependency>
+		<dependency>
+			<groupId>joinery</groupId>
+			<artifactId>joinery-dataframe</artifactId>
+			<version>1.8</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml-schemas</artifactId>
+			<version>3.15</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.9</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>3.9</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml-schemas</artifactId>
+			<version>3.9</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-scratchpad</artifactId>
+			<version>3.9</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>ooxml-schemas</artifactId>
+			<version>1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>openxml4j</artifactId>
+			<version>1.0-beta</version>
+		</dependency>
+		<dependency>
+			<groupId>org.knowm.xchart</groupId>
+			<artifactId>xchart</artifactId>
+			<version>3.8.0</version>
+		</dependency>
 
-<dependency>
-    <groupId>com.github.haifengl</groupId>
-    <artifactId>smile-core</artifactId>
-    <version>2.6.0</version>
-</dependency>
+		<dependency>
+			<groupId>com.github.haifengl</groupId>
+			<artifactId>smile-core</artifactId>
+			<version>2.6.0</version>
+		</dependency>
 
-<dependency>
-        <groupId>com.github.haifengl</groupId>
-        <artifactId>smile-data</artifactId>
-        <version>2.6.0</version>
-    </dependency>
-    
-    <dependency>
-        <groupId>com.github.haifengl</groupId>
-        <artifactId>smile-io</artifactId>
-        <version>2.6.0</version>
-    </dependency>
-    
-    <dependency>
-        <groupId>com.github.haifengl</groupId>
-        <artifactId>smile-plot</artifactId>
-        <version>2.6.0</version>
-    </dependency>
-    
-    <dependency>
-        <groupId>commons-io</groupId>
-        <artifactId>commons-io</artifactId>
-        <version>2.8.0</version>
-    </dependency>
+		<dependency>
+			<groupId>com.github.haifengl</groupId>
+			<artifactId>smile-data</artifactId>
+			<version>2.6.0</version>
+		</dependency>
 
-<dependency>
-    <groupId>org.apache.spark</groupId>
-    <artifactId>spark-core_2.12</artifactId>
-    <version>3.1.2</version>
-</dependency>
+		<dependency>
+			<groupId>com.github.haifengl</groupId>
+			<artifactId>smile-io</artifactId>
+			<version>2.6.0</version>
+		</dependency>
 
-<dependency>
-    <groupId>org.apache.spark</groupId>
-    <artifactId>spark-sql_2.12</artifactId>
-    <version>3.1.2</version>
-    <scope>provided</scope>
-</dependency>
+		<dependency>
+			<groupId>com.github.haifengl</groupId>
+			<artifactId>smile-plot</artifactId>
+			<version>2.6.0</version>
+		</dependency>
 
-<dependency>
-    <groupId>org.apache.spark</groupId>
-    <artifactId>spark-mllib_2.12</artifactId>
-    <version>3.1.2</version>
-    <scope>provided</scope>
-</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.8.0</version>
+		</dependency>
 
-<dependency>
-  <groupId>org.apache.spark</groupId>
-  <artifactId>spark-assembly_2.10</artifactId>
-  <version>1.1.0</version>
-  <type>pom</type>
-</dependency>
+		<dependency>
+			<groupId>org.apache.spark</groupId>
+			<artifactId>spark-core_2.12</artifactId>
+			<version>3.1.2</version>
+		</dependency>
 
-<dependency>
-    <groupId>tech.tablesaw</groupId>
-    <artifactId>tablesaw-plot</artifactId>
-    <version>0.24.4</version>
-</dependency>
-    
-  <dependency>
-    <groupId>tech.tablesaw</groupId>
-    <artifactId>tablesaw-jsplot</artifactId>
-    <version>0.38.2</version>
-</dependency>
+		<dependency>
+			<groupId>org.apache.spark</groupId>
+			<artifactId>spark-sql_2.12</artifactId>
+			<version>3.1.2</version>
+			<scope>provided</scope>
+		</dependency>
 
-		
-		
-		
-		
+		<dependency>
+			<groupId>org.apache.spark</groupId>
+			<artifactId>spark-mllib_2.12</artifactId>
+			<version>3.1.2</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.spark</groupId>
+			<artifactId>spark-assembly_2.10</artifactId>
+			<version>1.1.0</version>
+			<type>pom</type>
+		</dependency>
+
+		<dependency>
+			<groupId>tech.tablesaw</groupId>
+			<artifactId>tablesaw-plot</artifactId>
+			<version>0.24.4</version>
+		</dependency>
+
+		<dependency>
+			<groupId>tech.tablesaw</groupId>
+			<artifactId>tablesaw-jsplot</artifactId>
+			<version>0.38.2</version>
+		</dependency>
+
+
+
+
+
 	</dependencies>
-	
-<repositories>
-    <repository>
-        <snapshots>
-            <enabled>false</enabled>
-        </snapshots>
-        <id>central</id>
-        <name>bintray</name>
-        <url>http://jcenter.bintray.com</url>
-    </repository>
-</repositories>	
 
-	
-<pluginRepositories>
-    <pluginRepository>
-        <snapshots>
-            <enabled>false</enabled>
-        </snapshots>
-        <id>central</id>
-        <name>bintray-plugins</name>
-        <url>http://jcenter.bintray.com</url>
-    </pluginRepository>
-</pluginRepositories>
+	<repositories>
+		<repository>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+			<id>central</id>
+			<name>bintray</name>
+			<url>http://jcenter.bintray.com</url>
+		</repository>
+	</repositories>
+
+
+	<pluginRepositories>
+		<pluginRepository>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+			<id>central</id>
+			<name>bintray-plugins</name>
+			<url>http://jcenter.bintray.com</url>
+		</pluginRepository>
+	</pluginRepositories>
 
 	<build>
 		<plugins>
@@ -201,4 +220,5 @@
 		</plugins>
 	</build>
 
+	<packaging>war</packaging>
 </project>
